Disabled automatic build of unit tests, fixed integer mismatch in pdsteqr.F

--- a/src/lib/mpqc/math/CMakeLists.txt
+++ b/src/lib/mpqc/math/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(blas_test blas_test.cpp)
+add_executable(blas_test  EXCLUDE_FROM_ALL blas_test.cpp)
 
 target_link_libraries(blas_test
   ${LAPACK_LIBRARIES}
