Added CMake macros (cmake/modules/AddLibrary.cmake) to build mpqc libraries, object libraries, and object targets. Added more robust Eigen test when built in extern.

--- a/src/lib/chemistry/CMakeLists.txt
+++ b/src/lib/chemistry/CMakeLists.txt
@@ -1,42 +1,39 @@
+include(AddLibrary)
+
 set(subdirectories
   molecule
   qc
   solvent
 )
 
-foreach(s ${subdirectories})
-  add_subdirectory(${s})
-  list(APPEND objects ${${s}/OBJECTS})
-endforeach()
-
-list(APPEND objects $<TARGET_OBJECTS:molecule>)
-list(APPEND objects $<TARGET_OBJECTS:solvent>)
-
-add_library(chemistry ${objects})
-set(chemistry/OBJECTS ${objects} PARENT_SCOPE)
+add_mpqc_library(chemistry ${subdirectories})
 install(TARGETS chemistry DESTINATION lib)
 
-set(chemistry_deplibs math util)
+target_link_libraries(chemistry math util)
+
 if (HAVE_LIBINT2)
-  set(chemistry_deplibs ${chemistry_deplibs} ${LIBINT2_LIBRARY})
-endif()
-if (HAVE_PSI3)
-  set(chemistry_deplibs ${chemistry_deplibs} ${PSI3_LIBRARIES})
-endif()
-if (HAVE_BOOST)
-  set(chemistry_deplibs ${chemistry_deplibs} ${Boost_LIBRARIES})
-  if (PYTHONLIBS_FOUND)
-    set(chemistry_deplibs ${chemistry_deplibs} ${PYTHON_LIBRARIES})
-  endif()
-endif()
-if (HAVE_HDF5)
-  set(chemistry_deplibs ${chemistry_deplibs} ${HDF5_LIBRARIES})
-endif()
-if (HAVE_ARMCI)
-  set(chemistry_deplibs ${chemistry_deplibs} ${ARMCI_LIBRARIES})
-endif()
-if (HAVE_MPI)
-  set(chemistry_deplibs ${chemistry_deplibs} ${MPI_LIBRARIES})
+  target_link_libraries(chemistry ${LIBINT2_LIBRARY})
 endif()
 
-target_link_libraries(chemistry ${chemistry_deplibs})
+if (HAVE_PSI3)
+  target_link_libraries(chemistry ${PSI3_LIBRARIES})
+endif()
+
+if (HAVE_BOOST)
+  target_link_libraries(chemistry ${Boost_LIBRARIES})
+  if (PYTHONLIBS_FOUND)
+    target_link_libraries(chemistry ${PYTHON_LIBRARIES})
+  endif()
+endif()
+
+if (HAVE_HDF5)
+  target_link_libraries(chemistry ${HDF5_LIBRARIES})
+endif()
+
+if (HAVE_ARMCI)
+  target_link_libraries(chemistry ${ARMCI_LIBRARIES})
+endif()
+
+if (HAVE_MPI)
+  target_link_libraries(chemistry ${MPI_LIBRARIES})
+endif()
