--- a/src/lib/util/CMakeLists.txt
+++ b/src/lib/util/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(AddLibrary)
+
 set(subdirectories
   class
   container
@@ -9,20 +11,13 @@ set(subdirectories
   render
   state
 )
+
 if (HAVE_MADNESS)
-  set(subdirectories
-      ${subdirectories}
-      madness)
+  list(APPEND subdirectories madness)
   set(util_deplibs ${MADNESS_LIBRARIES})
 endif()
 
-foreach(s ${subdirectories})
-  add_subdirectory(${s})
-  list(APPEND objects $<TARGET_OBJECTS:${s}>)
-endforeach()
-
-set(util/OBJECTS ${objects} PARENT_SCOPE)
-add_library(util ${objects})
+add_mpqc_library(util ${subdirectories})
 install(TARGETS util DESTINATION lib)
 
 target_link_libraries(util ${util_deplibs})
