Added "correct" cxxflags/linkflags to Boost build. Enabled (optional) Boost Test.

--- a/src/lib/mpqc/math/CMakeLists.txt
+++ b/src/lib/mpqc/math/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(blas_test  EXCLUDE_FROM_ALL blas_test.cpp)
 
 target_link_libraries(blas_test
   ${LAPACK_LIBRARIES}
+  ${Boost_TEST_LIBRARY}
   ${Boost_LIBRARIES}
 )
 
