--- a/src/lib/mpqc/CMakeLists.txt
+++ b/src/lib/mpqc/CMakeLists.txt
@@ -7,6 +7,8 @@
 
 add_subdirectory(math)
 add_subdirectory(interfaces/tiledarray/tests)
+add_subdirectory(interfaces/tiledarray/tiling)
+add_subdirectory(basis)
 
 
 # # library headers
