--- a/src/lib/mpqc/interfaces/tiledarray/tiling/CMakeLists.txt
+++ b/src/lib/mpqc/interfaces/tiledarray/tiling/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(trange1_test trange1_test.cpp)
+add_executable(trange1_test EXCLUDE_FROM_ALL trange1_test.cpp)
 
 target_link_libraries(trange1_test
     chemistry
