--- a/src/lib/chemistry/qc/scf/mpqc.in
+++ b/src/lib/chemistry/qc/scf/mpqc.in
@@ -3,11 +3,10 @@ mpqc:(
   mole = $:mole
 )
 
-nproc = 4
 %molecule = $:ibuprofen
 %molecule = $:ethane_c1
-%molecule = $:naphtalene
-molecule = $:h2o_dimer
+molecule = $:naphtalene
+%molecule = $:h2o_dimer
 coor = $:symcoor
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -24,11 +23,11 @@ mole<DFCLHF>: (
 
   df_basis<GaussianBasisSet>:(
     molecule = $..:molecule
-    %name = "cc-pVDZ-JKFIT"
+    name = "cc-pVDZ-JKFIT"
     %name = "cc-pVTZ-JKFIT"
     %name = "aug-cc-pV6Z"
     %name = "cc-pVTZ-RI"
-    name = "cc-pVDZ"
+    %name = "cc-pVDZ"
     %name = "6-31G"
     %puream=yes
     %name = "6-31G"
@@ -44,8 +43,10 @@ mole<DFCLHF>: (
   	df_local_exchange = yes
     store_ints = mem
     %store_ints = mpi
-    exact_diag_J = yes
-    exact_diag_K = yes
+    %exact_diag_J = yes
+    %exact_diag_K = yes
+    exact_diag_J = no
+    exact_diag_K = no
   )
 
 
@@ -57,8 +58,8 @@ mole<DFCLHF>: (
   molecule = $:molecule
   mbasis<GaussianBasisSet>: (
     molecule = $:molecule
-    %name = "cc-pVDZ"
-    name = "3-21G"
+    name = "cc-pVDZ"
+    %name = "3-21G"
     %puream=yes
     %matrixkit = $:basis_matrixkit
   )
@@ -76,12 +77,13 @@ mole<DFCLHF>: (
   %total_charge = 1
   %docc = [3 0 1 0]
   %socc = [0 0 0 1]
-  %extrap<DIIS>: (
-  %  n = 4
-  %)
+
+  extrap<DIIS>: (
+    n = 4
+  )
 
   %guess_wavefunction = "scftest.wfn"
-  %guess_wavefunction = $:guess
+  guess_wavefunction = $:guess
   %debug = 4
 )
 
