--- a/src/lib/chemistry/qc/scf/mpqc.in
+++ b/src/lib/chemistry/qc/scf/mpqc.in
@@ -3,9 +3,9 @@ mpqc:(
   mole = $:mole
 )
 
-%molecule = $:ibuprofen
+molecule = $:ibuprofen
 %molecule = $:ethane_c1
-molecule = $:naphtalene
+%molecule = $:naphtalene
 %molecule = $:h2o_dimer
 coor = $:symcoor
 
@@ -23,7 +23,7 @@ mole<DFCLHF>: (
 
   df_basis<GaussianBasisSet>:(
     molecule = $..:molecule
-    name = "cc-pVDZ-JKFIT"
+    name = "cc-pVTZ-JKFIT"
     %name = "cc-pVTZ-JKFIT"
     %name = "aug-cc-pV6Z"
     %name = "cc-pVTZ-RI"
@@ -43,10 +43,10 @@ mole<DFCLHF>: (
   	df_local_exchange = yes
     store_ints = mem
     %store_ints = mpi
-    %exact_diag_J = yes
-    %exact_diag_K = yes
-    exact_diag_J = no
-    exact_diag_K = no
+    exact_diag_J = yes
+    exact_diag_K = yes
+    %exact_diag_J = no
+    %exact_diag_K = no
   )
 
 
